--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,8 @@
     "react/prop-types": "off",
     "comma-dangle": "off",
     "object-curly-newline": "off",
-    "camelcase": "off"
+    "camelcase": "off",
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function": ["error"]
   }
 }
