--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -13,7 +13,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
+    "use-combined-reducers": "^1.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -33,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/use-combined-reducers": "^1.0.0"
   }
 }
