--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -16,7 +16,8 @@
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "use-combined-reducers": "^1.0.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@make.org/types": "0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
