--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
-    "lerna": "2.2.0",
-    "packages": ["apps/*", "api", "components"],
-    "npmClient": "yarn",
-    "useWorkspaces": true,
-    "version": "1.0.0"
-  }
+  "lerna": "2.2.0",
+  "packages": ["apps/*", "api", "components", "types"],
+  "npmClient": "yarn",
+  "useWorkspaces": true,
+  "version": "1.0.0"
+}
