--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "root",
     "apps/*",
     "api",
-    "components"
+    "components",
+    "types"
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
@@ -31,7 +32,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-security": "~1.4.0",
     "lerna": "^2.9.0",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "@make.org/types": "^0.1.0"
   },
   "dependencies": {}
 }
