--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,7 @@
 
     "max-len": ["warn", { "code": 80 }],
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "off",
+    "react-hooks/exhaustive-deps": "warn",
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
     "comma-dangle": "off",
