--- a/components/package.json
+++ b/components/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
   },
   "browserslist": {
     "production": [
