--- a/components/package.json
+++ b/components/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "^15.12.5",
+    "@types/react": "^17.0.11",
+    "athena-design-tokens": "^0.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "typescript": "^4.3.4",
+    "@make.org/types": "0.1.0",
+    "@make.org/utils": "0.1.0"
   },
   "browserslist": {
     "production": [
