--- a/api/package.json
+++ b/api/package.json
@@ -2,5 +2,8 @@
   "name": "@make.org/api",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@make.org/types": "0.1.0",
+    "typescript": "^4.3.5"
+  }
 }
