--- a/ui/package.json
+++ b/ui/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "@make.org/components",
+  "name": "@make.org/ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@make.org/assets": "0.1.0",
-    "@make.org/types": "0.1.0",
-    "@make.org/ui": "0.1.0",
-    "@make.org/utils": "0.1.0",
     "@types/node": "^15.12.5",
     "@types/react": "^17.0.11",
     "athena-design-tokens": "^0.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-head": "^3.4.0",
-    "react-router": "^5.2.0",
     "styled-components": "^5.3.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "@make.org/types": "0.1.0",
+    "@make.org/utils": "0.1.0"
   },
   "browserslist": {
     "production": [
