--- a/utils/package.json
+++ b/utils/package.json
@@ -1,11 +1,20 @@
 {
-    "name": "@make.org/utils",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@make.org/types": "0.1.0",
-        "i18next": "^20.3.2",
-        "typescript": "^4.3.5"
-    },
-    "browserslist": {}
+  "name": "@make.org/utils",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@make.org/assets": "0.1.0",
+    "@make.org/types": "0.1.0",
+    "@make.org/utils": "0.1.0",
+    "@make.org/api": "0.1.0",
+    "axios": "^0.21.1",
+    "i18next": "^20.3.2",
+    "moment": "^2.29.1",
+    "query-string": "^7.0.1",
+    "react-router": "^5.2.0",
+    "typescript": "^4.3.5",
+    "url-search-params-polyfill": "^8.1.1",
+    "uuid": "^8.3.2"
+  },
+  "browserslist": {}
 }
