--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "store"
   ],
   "scripts": {
+    "prepare": "husky install",
     "bootstrap": "lerna bootstrap",
     "lint": "eslint api apps components",
     "start:widget": "yarn workspace @make.org/widget start"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@make.org/types": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
@@ -36,6 +39,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-security": "~1.4.0",
+    "husky": "^7.0.0",
     "lerna": "^2.9.0",
     "prettier": "^2.3.1"
   },
