create store workspace

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,15 @@
 {
   "lerna": "2.2.0",
-  "packages": ["apps/*", "api", "components", "types", "assets", "utils", "ui"],
+  "packages": [
+    "apps/*",
+    "api",
+    "components",
+    "types",
+    "assets",
+    "utils",
+    "ui",
+    "store"
+  ],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "1.0.0"
