--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@make.org/types": "0.1.0",
+    "@make.org/store": "0.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
