--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "types",
     "assets",
     "utils",
-    "ui"
+    "ui",
+    "store"
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
+    "@make.org/types": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
@@ -35,8 +37,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-security": "~1.4.0",
     "lerna": "^2.9.0",
-    "prettier": "^2.3.1",
-    "@make.org/types": "^0.1.0"
+    "prettier": "^2.3.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "typescript": "^4.3.5"
+  }
 }
