--- a/components/package.json
+++ b/components/package.json
@@ -8,15 +8,13 @@
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
     "@make.org/store": "0.1.0",
-    "@types/node": "^15.12.5",
     "@types/react": "^17.0.11",
     "athena-design-tokens": "^0.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-head": "^3.4.0",
     "react-router": "^5.2.0",
-    "styled-components": "^5.3.0",
-    "typescript": "^4.3.4"
+    "styled-components": "^5.3.0"
   },
   "browserslist": {
     "production": [
