--- a/store/package.json
+++ b/store/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@make.org/types": "0.1.0",
-    "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.2",
     "@types/use-combined-reducers": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
