--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@make.org/types": "0.1.0"
+    "@make.org/assets": "0.1.0",
+    "@make.org/types": "0.1.0",
+    "@make.org/utils": "0.1.0",
+    "axios": "^0.21.1",
+    "axios-retry": "^3.1.9",
+    "react-router": "^5.2.0",
+    "uuid": "^8.3.2"
   }
 }
