--- a/components/package.json
+++ b/components/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@make.org/api": "0.1.0",
     "@make.org/assets": "0.1.0",
+    "@make.org/components": "0.1.0",
+    "@make.org/store": "0.1.0",
     "@make.org/types": "0.1.0",
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
-    "@make.org/store": "0.1.0",
     "@types/react": "^17.0.11",
     "athena-design-tokens": "^0.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-head": "^3.4.0",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0"
   },
   "browserslist": {
