--- a/ui/package.json
+++ b/ui/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@make.org/assets": "0.1.0",
     "@make.org/types": "0.1.0",
     "@make.org/utils": "0.1.0",
-    "@make.org/assets": "0.1.0",
     "@types/node": "^15.12.5",
     "@types/react": "^17.0.11",
     "athena-design-tokens": "^0.1.7",
     "react": "^17.0.2",
+    "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
