--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
         "@make.org/utils": "0.1.0",
         "athena-design-tokens": "^0.1.7",
         "react": "^17.0.2",
+        "react-test-renderer": "^17.0.2",
         "styled-components": "^5.3.0"
     },
     "browserslist": {},
