--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prepare": "husky install",
     "bootstrap": "lerna bootstrap",
     "lint": "eslint api apps components",
-    "start:widget": "yarn workspace @make.org/widget start"
+    "start:widget": "yarn workspace @make.org/widget dev"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
