--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "sourceMap": true
+    "sourceMap": true,
+    "paths": {
+      "@make-org/widget": ["./apps/widget/*"],
+      "@make.org/components": ["./components/*"],
+      "@make.org/types": ["./types/*"],
+      "@make.org/api": ["./api/*"],
+      "@make.org/assets": ["./assets/*"],
+      "@make.org/utils": ["./utils/*"],
+      "@make.org/ui": ["./ui/*"],
+      "@make.org/store": ["./store/*"]
+    }
   }
 }
