fix(global): types fixing

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "scripts": {
     "prepare": "husky install",
+    "postinstall": "husky install && rm -rf .git/hooks && ln -s ../.husky .git/hooks",
     "bootstrap": "lerna bootstrap",
     "lint": "eslint api apps components",
     "start:widget": "yarn workspace @make.org/widget dev"
