--- a/store/package.json
+++ b/store/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@make.org/api": "0.1.0",
     "@make.org/types": "0.1.0",
     "@make.org/utils": "0.1.0",
-    "@make.org/api": "0.1.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.2",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
