--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@make.org/components": "0.1.0",
     "@make.org/store": "0.1.0",
     "@make.org/types": "0.1.0",
     "@make.org/utils": "0.1.0",
-    "@make.org/components": "0.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -43,6 +43,7 @@
     "tsconfig-paths": "^3.9.0",
     "webpack": "^5.42.1",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "yaml-loader": "^0.6.0"
   }
 }
