--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@make.org/api": "^0.1.0",
+    "@make.org/assets": "^0.1.0",
     "@make.org/components": "0.1.0",
     "@make.org/store": "0.1.0",
     "@make.org/types": "0.1.0",
@@ -24,7 +26,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "dev": "webpack serve --mode development --progress"
+    "dev": "webpack serve --mode development --progress --hot"
   },
   "browserslist": {
     "production": [
@@ -41,6 +43,7 @@
   "devDependencies": {
     "@babel/plugin-transform-typescript": "^7.14.6",
     "@babel/preset-typescript": "^7.14.5",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
