--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,8 @@
     },
     "browserslist": {},
     "devDependencies": {
-        "react-test-renderer": "^17.0.2"
+        "file-loader": "^6.2.0",
+        "react-test-renderer": "^17.0.2",
+        "webpack": "^5.45.0"
     }
 }
