--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -2,6 +2,7 @@
   "name": "@make.org/widget",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
   "dependencies": {
     "@make.org/api": "^0.1.0",
     "@make.org/assets": "^0.1.0",
@@ -25,7 +26,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "dev": "webpack serve --mode development --progress --hot"
+    "dev": "webpack serve --mode development --progress --hot",
+    "prod": "webpack serve --mode production --progress --hot"
   },
   "browserslist": {
     "production": [
@@ -48,6 +50,7 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
     "webpack": "^5.42.1",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "yaml-loader": "^0.6.0"
