chore(global): change to i18next library

--- a/ui/package.json
+++ b/ui/package.json
@@ -7,9 +7,10 @@
     "@make.org/types": "0.1.0",
     "@make.org/utils": "0.1.0",
     "@types/node": "^15.12.5",
-    "@types/styled-components": "^5.1.11",
     "@types/react": "^17.0.11",
+    "@types/styled-components": "^5.1.11",
     "athena-design-tokens": "^0.1.7",
+    "i18next": "^20.3.4",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
