--- a/components/package.json
+++ b/components/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.11",
     "athena-design-tokens": "^0.1.7",
     "enzyme": "^3.11.0",
+    "i18next": "^20.3.4",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
