--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
+    "i18next": "^20.3.4",
     "typescript": "^4.3.5"
   }
 }
