--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -43,8 +43,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-typescript": "^7.14.6",
-    "@babel/preset-typescript": "^7.14.5",
+    "@babel/core": "^7.14.8",
+    "babel-loader": "^8.2.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.3",
