--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
   "exclude": ["**/node_modules"],
   "compilerOptions": {
     "baseUrl": "./types/index",
-    "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -25,7 +24,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
+    "target": "esnext",
     "sourceMap": true,
     "paths": {
       "@make.org/widget": ["./apps/widget/*"],
