--- a/utils/package.json
+++ b/utils/package.json
@@ -12,9 +12,9 @@
     "@make.org/utils": "0.1.0",
     "athena-design-tokens": "^0.1.7",
     "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "i18next": "^20.3.4",
     "mockdate": "^3.0.5",
-    "moment": "^2.29.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-router": "^5.2.0",
