--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -45,7 +45,7 @@
 				"react-facebook-login": "~4.1.1",
 				"react-google-login": "~5.2.2",
 				"react-head": "~3.4.0",
-				"react-modal": "~3.14.2",
+				"react-modal": "^3.14.3",
 				"react-router": "^5.2.0",
 				"react-router-dom": "^5.2.0",
 				"redux": "~4.1.0",
