--- a/types/package.json
+++ b/types/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.2",
-		"moment": "^2.29.0"
+    "react": "^17.0.2"
   },
   "browserslist": {}
 }
