--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,7 @@
     "object-curly-newline": "off",
     "camelcase": "off",
     "no-empty-function": "off",
+    "react/no-danger": "off",
     "@typescript-eslint/no-empty-function": ["error"]
   }
 }
