fix(front): fix some imports

--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -14,6 +14,7 @@
 				"@make.org/types": "0.1.0",
 				"@make.org/ui": "0.1.0",
 				"@make.org/utils": "0.1.0",
+				"@types/react-router-dom": "^5.1.8",
 				"adblockdetect": "^0.0.2",
 				"athena-design-tokens": "^0.1.7",
 				"axios": "~0.21.1",
@@ -108,6 +109,7 @@
 				"@types/webpack-dev-middleware": "^5.0.1",
 				"@types/webpack-hot-middleware": "^2.25.5",
 				"@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+				"babel-loader": "^8.2.2",
 				"cypress": "7.4.0",
 				"cypress-cucumber-preprocessor": "4.1.2",
 				"cypress-html-validate": "^1.5.1",
