--- a/utils/package.json
+++ b/utils/package.json
@@ -13,6 +13,7 @@
     "athena-design-tokens": "^0.1.7",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "glider-js": "^1.7.7",
     "i18next": "^20.3.4",
     "mockdate": "^3.0.5",
     "query-string": "^7.0.1",
