--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -136,7 +136,7 @@
 				"yargs": "^17.0.1"
 		},
 		"scripts": {
-				"dev": "webpack --mode development --progress --color --config ./webpack/config.babel.js",
+				"dev": "webpack serve --mode development --progress --hot",
 				"prod": "webpack serve --mode production --progress --hot"
 		}
 }
