fix(front): devserver config

--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -16,7 +16,8 @@
     "../../api",
     "../../assets",
     "../../components",
-    "../../utils" 
+    "../../utils",
+    "./i18n/*.json"
   ],
   "paths": {
     "@make.org/widget": ["../../apps/widget/*"],
