--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.3",
     "i18next": "^20.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
