--- a/store/tsconfig.json
+++ b/store/tsconfig.json
@@ -1,8 +1,21 @@
 {
+  "references": [
+    { "path": "../api" },
+    { "path": "../utils" }
+  ],
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "jsx": "react",
-    "esModuleInterop": true,
     "composite": true
+  },
+  "paths": {
+    "@make.org/widget": ["../apps/widget/*"],
+    "@make.org/front": ["../apps/front/*"],
+    "@make.org/components": ["../components/*"],
+    "@make.org/types": ["../types/*"],
+    "@make.org/api": ["../api/*"],
+    "@make.org/assets": ["../assets/*"],
+    "@make.org/utils": ["../utils/*"],
+    "@make.org/ui": ["../ui/*"],
+    "@make.org/store": ["../store/*"]
   }
 }
