--- a/apps/front/.env.local
+++ b/apps/front/.env.local
@@ -1,6 +1,6 @@
 HTTPS=true
 HOST=local.makeorg.tech
 PORT=443
-API_URL=https://local.makeorg.tech/api-local
+API_URL=https://api.preprod.makeorg.tech
 PROXY_TARGET_API_URL=https://api.preprod.makeorg.tech
 FRONT_URL=https://local.makeorg.tech
