--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -2,7 +2,6 @@
 		"name": "@make.org/front",
 		"version": "0.1.0",
 		"private": true,
-		"sideEffects": false,
 		"dependencies": {
 				"@loadable/component": "^5.15.0",
 				"@loadable/server": "~5.15.0",
@@ -37,6 +36,7 @@
 				"http-proxy-middleware": "^2.0.0",
 				"i18next": "^20.3.1",
 				"memory-cache": "~0.2.0",
+				"node-mocks-http": "^1.10.1",
 				"pm2": "^4.5.6",
 				"query-string": "7.0.0",
 				"react": "^17.0.2",
@@ -49,8 +49,6 @@
 				"react-modal": "^3.14.3",
 				"react-router": "^5.2.0",
 				"react-router-dom": "^5.2.0",
-				"redux": "~4.1.0",
-				"redux-thunk": "~2.3.0",
 				"serve-favicon": "^2.5.0",
 				"serve-static": "~1.14.1",
 				"source-map": "^0.7.3",
@@ -110,18 +108,12 @@
 				"@types/webpack-hot-middleware": "^2.25.5",
 				"@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
 				"babel-loader": "^8.2.2",
-				"cypress": "7.4.0",
-				"cypress-cucumber-preprocessor": "4.1.2",
-				"cypress-html-validate": "^1.5.1",
-				"cypress-wait-until": "^1.7.1",
-				"enzyme": "~3.11.0",
 				"file-loader": "^6.2.0",
 				"html-validate": "4.13.1",
 				"html-webpack-inline-source-plugin": "1.0.0-beta.2",
 				"html-webpack-plugin": "^5.3.2",
 				"prom-client": "^13.1.0",
 				"react-is": "17.0.2",
-				"react-test-renderer": "~17.0.2",
 				"regenerator-runtime": "^0.13.7",
 				"ts-loader": "^9.2.3",
 				"ts-node": "^10.0.0",
