--- a/components/package.json
+++ b/components/package.json
@@ -39,7 +39,6 @@
   },
   "devDependencies": {
     "@types/react-facebook-login": "^4.1.4",
-    "@types/react-router": "^5.1.16",
-    "enzyme": "^3.11.0"
+    "@types/react-router": "^5.1.16"
   }
 }
