--- a/package.json
+++ b/package.json
@@ -15,26 +15,33 @@
   ],
   "scripts": {
     "postinstall": "husky install && rm -rf .git/hooks && ln -s ../.husky .git/hooks",
-    "bootstrap": "lerna bootstrap",
-    "lint": "eslint api apps components",
     "start:widget": "yarn workspace @make.org/widget dev",
     "prod:widget": "yarn workspace @make.org/widget prod",
     "start:front": "yarn workspace @make.org/front dev",
     "prod:front": "yarn workspace @make.org/front prod"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.8",
     "@babel/eslint-parser": "^7.14.7",
+    "@babel/preset-env": "^7.14.8",
+    "@babel/preset-typescript": "^7.14.5",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@make.org/api": "^0.1.0",
     "@make.org/types": "^0.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@types/enzyme": "^3.10.9",
+    "@types/jest": "^26.0.24",
+    "@types/jsdom": "^16.2.13",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "enzyme": "^3.11.0",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "~8.3.0",
     "eslint-import-resolver-babel-module": "~5.3.1",
     "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-flowtype": "~5.7.2",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "~24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -43,8 +50,14 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-security": "~1.4.0",
     "husky": "^7.0.0",
+    "jest": "^27.0.6",
+    "jest-styled-components": "^7.0.5",
+    "jscpd": "^3.3.26",
+    "jsdom": "^16.6.0",
     "lerna": "^2.9.0",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "snapshot-diff": "^0.9.0",
+    "ts-jest": "^27.0.4"
   },
   "dependencies": {
     "@types/node": "^16.0.0",
