--- a/ui/package.json
+++ b/ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@make.org/assets": "0.1.0",
     "@make.org/types": "0.1.0",
+    "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
     "@types/node": "^15.12.5",
     "@types/react": "^17.0.11",
@@ -16,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^17.0.2",
+    "snapshot-diff": "^0.9.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.4"
   },
