--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -1,8 +1,24 @@
 {
+  "references": [
+    { "path": "../api" },
+    { "path": "../assets" },
+    { "path": "../components" },
+    { "path": "../store" },
+    { "path": "../ui" }
+  ],
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "jsx": "react",
-    "esModuleInterop": true,
     "composite": true
+  },
+  "paths": {
+    "@make.org/widget": ["../apps/widget/*"],
+    "@make.org/front": ["../apps/front/*"],
+    "@make.org/components": ["../components/*"],
+    "@make.org/types": ["../types/*"],
+    "@make.org/api": ["../api/*"],
+    "@make.org/assets": ["../assets/*"],
+    "@make.org/utils": ["../utils/*"],
+    "@make.org/ui": ["../ui/*"],
+    "@make.org/store": ["../store/*"]
   }
 }
