--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -2,6 +2,7 @@
 		"name": "@make.org/front",
 		"version": "0.1.0",
 		"private": true,
+		"sideEffects": false,
 		"dependencies": {
 				"@loadable/component": "^5.15.0",
 				"@loadable/server": "~5.15.0",
