--- a/assets/package.json
+++ b/assets/package.json
@@ -12,10 +12,8 @@
         "react-test-renderer": "^17.0.2",
         "styled-components": "^5.3.0"
     },
-    "browserslist": {},
     "devDependencies": {
         "file-loader": "^6.2.0",
-        "react-test-renderer": "^17.0.2",
-        "webpack": "^5.45.0"
+        "react-test-renderer": "^17.0.2"
     }
 }
