--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "prod:front": "yarn workspace @make.org/front prod"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/eslint-parser": "^7.14.7",
-    "@babel/preset-env": "^7.14.8",
-    "@babel/preset-typescript": "^7.14.5",
+    "@babel/core": "^7.15.0",
+    "@babel/eslint-parser": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@make.org/api": "^0.1.0",
@@ -63,6 +64,8 @@
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
-    "typescript": "^4.3.5"
+    "core-js": "^3.16.0",
+    "typescript": "^4.3.5",
+    "webpack": "^5.46.0"
   }
 }
