--- a/api/package.json
+++ b/api/package.json
@@ -11,5 +11,9 @@
     "axios-retry": "^3.1.9",
     "react-router": "^5.2.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2"
   }
 }
