--- a/components/package.json
+++ b/components/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "@types/react-facebook-login": "^4.1.4",
-    "@types/react-router": "^5.1.16"
+    "@types/react-router": "^5.1.16",
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2"
   }
 }
