--- a/types/package.json
+++ b/types/package.json
@@ -6,5 +6,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "react": "^17.0.2"
+  },
+  "browserslist": {},
+  "devDependencies": {
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2"
   }
 }
