--- a/ui/package.json
+++ b/ui/package.json
@@ -21,5 +21,21 @@
     "snapshot-diff": "^0.9.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2"
   }
 }
