--- a/store/package.json
+++ b/store/package.json
@@ -2,6 +2,7 @@
   "name": "@make.org/store",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
   "dependencies": {
     "@make.org/api": "0.1.0",
     "@make.org/types": "0.1.0",
