--- a/ui/package.json
+++ b/ui/package.json
@@ -2,6 +2,7 @@
   "name": "@make.org/ui",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
   "dependencies": {
     "@make.org/assets": "0.1.0",
     "@make.org/types": "0.1.0",
