--- a/utils/package.json
+++ b/utils/package.json
@@ -2,6 +2,7 @@
   "name": "@make.org/utils",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
   "dependencies": {
     "@make.org/api": "0.1.0",
     "@make.org/assets": "0.1.0",
