fix(global): no unused vars

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
     "camelcase": "off",
     "no-empty-function": "off",
     "react/no-danger": "off",
-    "@typescript-eslint/no-empty-function": ["error"]
+    "@typescript-eslint/no-empty-function": ["error"],
+    "@typescript-eslint/no-unused-vars": ["error", {  "args": "none" }]
   }
 }
