--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,6 +48,7 @@
     "no-empty-function": "off",
     "react/no-danger": "off",
     "@typescript-eslint/no-empty-function": ["error"],
-    "@typescript-eslint/no-unused-vars": ["error", {  "args": "none" }]
+    "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
+    "@typescript-eslint/explicit-module-boundary-types": ["error", { "allowArgumentsExplicitlyTypedAsAny": true }]
   }
 }
