--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -14,7 +14,6 @@
 				"@make.org/types": "^0.1.0",
 				"@make.org/ui": "0.1.0",
 				"@make.org/utils": "0.1.0",
-				"@types/react-router-dom": "^5.1.8",
 				"adblockdetect": "^0.0.2",
 				"athena-design-tokens": "^0.1.7",
 				"axios": "~0.21.1",
@@ -24,6 +23,7 @@
 				"compression": "~1.7.3",
 				"cors": "^2.8.5",
 				"deep-freeze": "~0.0.1",
+				"dotenv": "^10.0.0",
 				"dotenv-webpack": "^7.0.3",
 				"express": "~4.17.1",
 				"express-prom-bundle": "~6.3.6",
@@ -62,19 +62,18 @@
 				"webpack": "^5.46.0",
 				"webpack-manifest": "^1.0.8",
 				"webpack-manifest-plugin": "^3.1.1",
-				"webpack-merge": "^5.8.0",
 				"webpack-node-externals": "^3.0.0",
 				"winston": "~3.3.3"
 		},
 		"devDependencies": {
+				"@babel/core": "^7.15.0", 
+				"@babel/preset-typescript": "^7.15.0",
 				"@babel/register": "^7.14.5",
 				"@cypress/code-coverage": "^3.9.10",
 				"@loadable/babel-plugin": "~5.13.2",
 				"@simbathesailor/babel-plugin-use-what-changed": "^2.1.0",
 				"@simbathesailor/use-what-changed": "^2.0.0",
 				"@svgr/cli": "~5.5.0",
-				"@testing-library/jest-dom": "^5.13.0",
-				"@testing-library/react": "^11.2.7",
 				"@types/compression": "^1.7.1",
 				"@types/cors": "^2.8.12",
 				"@types/deep-freeze": "^0.1.2",
@@ -84,13 +83,14 @@
 				"@types/node": "^16.4.1",
 				"@types/react": "^17.0.13",
 				"@types/react-dom": "^17.0.2",
+				"@types/react-router-dom": "^5.1.8",
 				"@types/serve-favicon": "^2.5.3",
 				"@types/ua-parser-js": "^0.7.36",
 				"@types/universal-cookie": "^3.0.0",
 				"@types/webpack": "^5.28.0",
 				"@types/webpack-env": "^1.16.2",
-				"@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
 				"babel-loader": "^8.2.2",
+				"core-js": "^3.16.2",
 				"cypress": "^7.4.0",
 				"cypress-cucumber-preprocessor": "^4.1.2",
 				"cypress-html-validate": "^1.5.1",
@@ -104,13 +104,8 @@
 				"regenerator-runtime": "^0.13.7",
 				"tsconfig-paths": "^3.9.0",
 				"webpack-cli": "^4.7.2",
-				"webpack-dev-middleware": "^5.0.0",
 				"webpack-dev-server": "^3.11.2",
-				"webpack-hot-middleware": "^2.25.0",
-				"webpack-manifest": "^1.0.8",
-				"webpack-manifest-plugin": "^3.1.1",
 				"webpack-merge": "^5.8.0",
-				"webpack-node-externals": "^3.0.0",
 				"yaml-jest": "^1.0.5",
 				"yaml-loader": "^0.6.0",
 				"yargs": "^17.0.1"
@@ -119,5 +114,5 @@
 				"dev": "webpack serve --mode development --progress --color --config ./webpack/dev.config.js",
 				"server": "pm2-runtime start ecosystem.config.js",
 				"build": "webpack --mode production --progress --color --config ./webpack/build.config.js"
-			}
+		}
 }
