--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -32,7 +32,7 @@
     "prod": "webpack serve --mode production --progress --hot"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/core": "7.15.0",
     "@cypress/code-coverage": "^3.9.10",
     "babel-loader": "^8.2.2",
     "cypress": "^7.4.0",
