--- a/components/package.json
+++ b/components/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/react-facebook-login": "^4.1.4",
     "@types/react-router": "^5.1.16",
+    "core-js": "^3.16.2",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2"
   }
