--- a/ui/package.json
+++ b/ui/package.json
@@ -35,6 +35,8 @@
     ]
   },
   "devDependencies": {
+    "core-js": "^3.16.2",
+    "snapshot-diff": "^0.9.0",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2"
   }
