--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -60,20 +60,7 @@ services:
       ports:
         - 3000:3000
         - 8888:8888
-      volumes:
-        &default_volumes
-        - .:/home/app
-        - /home/app/node_modules
-        - /home/app/apps/widget/node_modules
-        - /home/app/api/node_modules
-        - /home/app/components/node_modules
-        - /home/app/types/node_modules
-        - /home/app/assets/node_modules
-        - /home/app/utils/node_modules
-        - /home/app/ui/node_modules
-        - /home/app/store/node_modules
-        - /home/app/apimock/node_modules
-        - /home/app/apps/front/dist
+      volumes: *default_volumes
       profiles: 
         - widget-dev
 
