chore(front): dockerfile for production

--- a/apps/front/Dockerfile
+++ b/apps/front/Dockerfile
@@ -5,8 +5,6 @@ FROM node:16-alpine AS base
 WORKDIR /home/app
 
 ENV PATH /home/app/node_modules/.bin:$PATH
-#ENV PATH /home/app/apps/front/node_modules/.bin:$PATH
-#ENV PATH /home/app/apps/widget/node_modules/.bin:$PATH
 ENV CHOKIDAR_USEPOLLING true
 
 RUN apk --no-cache add git
@@ -32,13 +30,6 @@ COPY . ./
 ############
 FROM base AS app-dev
 
-WORKDIR /home/app
-
-ENV PATH /home/app/node_modules/.bin:$PATH
-#ENV PATH /home/app/apps/front/node_modules/.bin:$PATH
-#ENV PATH /home/app/apps/widget/node_modules/.bin:$PATH
-ENV CHOKIDAR_USEPOLLING true
-
 CMD ["./node_modules/.bin/lerna", "run", "--scope=@make.org/front", "dev", "--stream"]
 
 EXPOSE 3000
@@ -46,12 +37,28 @@ EXPOSE 3000
 ############
 # TEST
 ############
-FROM base AS app-test
+FROM cypress/browsers:node14.17.0-chrome91-ff89 AS app-test
 
 WORKDIR /home/app
 
+RUN npm install -g lerna@4.0.0
+
+COPY ["package*.json", "yarn.lock", "./"]
+COPY ["apps/front/package*.json", "./apps/front/"]
+COPY ["api/package*.json", "./api/"]
+COPY ["components/package*.json", "./components/"]
+COPY ["types/package*.json", "./types/"]
+COPY ["assets/package*.json", "./assets/"]
+COPY ["utils/package*.json", "./utils/"]
+COPY ["ui/package*.json", "./ui/"]
+COPY ["store/package*.json", "./store/"]
+COPY lerna.json ./
+
+RUN ["lerna", "bootstrap"]
+
+COPY . ./
+
 ENV PATH /home/app/node_modules/.bin:$PATH
-ENV CHOKIDAR_USEPOLLING true
 ENV NODE_ENV test
 
 RUN ["./node_modules/.bin/lerna", "run", "--scope=@make.org/front",  "build", "--stream"]
@@ -59,3 +66,49 @@ CMD ["./node_modules/.bin/lerna", "run", "--scope=@make.org/front", "test:cypres
 
 EXPOSE 9009
 
+############
+# BUILD
+############
+FROM keymetrics/pm2:16-alpine AS base-production
+
+WORKDIR /usr/app
+
+COPY ["package*.json", "yarn.lock", "./"]
+COPY ["apps/front/package*.json", "./apps/front/"]
+COPY ["api/package*.json", "./api/"]
+COPY ["components/package*.json", "./components/"]
+COPY ["types/package*.json", "./types/"]
+COPY ["assets/package*.json", "./assets/"]
+COPY ["utils/package*.json", "./utils/"]
+COPY ["ui/package*.json", "./ui/"]
+COPY ["store/package*.json", "./store/"]
+RUN yarn install --no-progress --frozen-lockfile
+
+COPY . ./
+RUN yarn workspace @make.org/front build
+
+# keep only production modules and autoclean
+RUN yarn install --no-progress --frozen-lockfile --check-files --production
+RUN yarn autoclean --force
+
+
+FROM keymetrics/pm2:16-alpine as app-production
+
+ENV PORT 8000
+
+RUN apk --no-cache add curl
+
+WORKDIR /usr/app/
+COPY --from=base-production /usr/app/apps/front/dist ./dist
+COPY --from=base-production /usr/app/apps/front/ecosystem.config.js ./ecosystem.config.js
+COPY --from=base-production /usr/app/apps/front/bin ./bin
+COPY --from=base-production /usr/app/apps/front/i18n ./i18n
+COPY --from=base-production /usr/app/apps/front/server/staticData ./server/staticData
+
+COPY --from=base-production /usr/app/node_modules ./node_modules
+
+EXPOSE 8000
+
+CMD [ "pm2-runtime", "start", "ecosystem.config.js" ]
+
+HEALTHCHECK --interval=20s CMD curl --fail http://localhost:8000 || exit 1
