--- a/package.json
+++ b/package.json
@@ -30,6 +30,52 @@
     "cypress:front": "yarn workspace @make.org/front cypress:open"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "~7.14.4",
+    "@babel/preset-typescript": "^7.15.0",    
+    "@babel/register": "^7.14.5",
+    "@cypress/code-coverage": "^3.9.10",
+    "@loadable/babel-plugin": "~5.13.2",
+    "@simbathesailor/babel-plugin-use-what-changed": "^2.1.0",
+    "@simbathesailor/use-what-changed": "^2.0.0",
+    "@svgr/cli": "~5.5.0",
+    "@types/compression": "^1.7.1",
+    "@types/cors": "^2.8.12",
+    "@types/deep-freeze": "^0.1.2",
+    "@types/express": "^4.17.13",
+    "@types/loadable__server": "^5.12.6",
+    "@types/memory-cache": "^0.2.1",
+    "@types/node": "^16.4.1",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/serve-favicon": "^2.5.3",
+    "@types/ua-parser-js": "^0.7.36",
+    "@types/universal-cookie": "^3.0.0",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-env": "^1.16.2",
+    "babel-loader": "^8.2.2",
+    "core-js": "^3.16.2",
+    "cypress": "^7.4.0",
+    "cypress-cucumber-preprocessor": "^4.1.2",
+    "cypress-html-validate": "^1.5.1",
+    "cypress-wait-until": "^1.7.1",
+    "file-loader": "^6.2.0",
+    "html-validate": "4.13.1",
+    "html-webpack-inline-source-plugin": "1.0.0-beta.2",
+    "html-webpack-plugin": "^5.3.2",
+    "react-is": "17.0.2",
+    "regenerator-runtime": "^0.13.7",
+    "start-server-and-test": "^1.13.1",
+    "tsconfig-paths": "^3.9.0",
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "yaml-jest": "^1.0.5",
+    "yaml-loader": "^0.6.0",
+    "prom-client": "^13.1.0",
+
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@testing-library/jest-dom": "^5.14.1",
