--- a/assets/package.json
+++ b/assets/package.json
@@ -14,9 +14,6 @@
         "styled-components": "^5.3.0"
     },
     "devDependencies": {
-        "file-loader": "^6.2.0",
-        "react-test-renderer": "^17.0.2",
-        "webpack": "^5.45.0",
-        "webpack-cli": "^4.7.2"
+        "react-test-renderer": "^17.0.2"
     }
 }
