--- a/utils/package.json
+++ b/utils/package.json
@@ -33,9 +33,6 @@
     "winston": "~3.3.3"
   },
   "devDependencies": {
-    "core-js": "^3.16.2",
-    "mockdate": "^3.0.5",
-    "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2"
+    "mockdate": "^3.0.5"
   }
 }
