--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^26.0.15",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "athena-design-tokens": "^0.1.7",
     "body-parser": "~1.19.0",
     "compression": "~1.7.3",
     "cors": "^2.8.5",
